--- a/main_galaxy.yaml
+++ b/main_galaxy.yaml
@@ -5,7 +5,7 @@
 - name: Enable repos for all
   hosts: all
   become: true
-  gather_facts: no
+  gather_facts: yes
   tasks:
     - import_role:
         name: repos
