--- a/main_galaxy.yaml
+++ b/main_galaxy.yaml
@@ -21,7 +21,7 @@
 - name: Deploy Tomcat
   hosts: apps
   become: true
-  gather_facts: no
+  gather_facts: yes
   tasks:
     - import_role:
         name: tomcat 
