--- a/main_galaxy.yaml
+++ b/main_galaxy.yaml
@@ -13,7 +13,7 @@
 - name: Deploy HAProxy
   hosts: frontends
   become: true
-  gather_facts: no
+  gather_facts: yes
   tasks:
     - import_role:
         name: haproxy
@@ -45,7 +45,7 @@
 - name: Deploy Apache
   hosts: apps
   become: true
-  gather_facts: no
+  gather_facts: yes
   tasks:
     - import_role:
         name: apache
